# nomos.ai

./: .gitignore  CLAUDE.md  Dockerfile  docker-compose.yaml  pyproject.toml
config/: curriculum.yaml  defense_personas.yaml
docs/: milestones.html
scripts/: seed_lectures.py  seed_local.py  seed_questions.py
seeds/: ai_ml.yaml  computer_science.yaml  data_science.yaml  economics.yaml  financial_engineering.yaml
seeds/lectures/: AI-F-001.yaml  AI-F-002.yaml  AI-F-003.yaml  AI-F-004.yaml  CS-F-001.yaml  CS-F-002.yaml  CS-F-003.yaml  CS-F-004.yaml  DS-F-001.yaml  DS-F-002.yaml  DS-F-003.yaml  DS-F-004.yaml  DS-F-005.yaml  ECON-F-001.yaml  ECON-F-002.yaml  ECON-F-003.yaml  ECON-F-004.yaml  ECON-F-005.yaml  ECON-F-006.yaml  ECON-F-007.yaml  ECON-F-008.yaml  FE-F-001.yaml  FE-F-002.yaml  FE-F-003.yaml  FE-F-004.yaml  FE-F-005.yaml
src/phd_platform/: __init__.py  __main__.py  config.py  orchestrator.py
src/phd_platform/agents/: __init__.py  base.py  runner.py
src/phd_platform/assessment/: __init__.py  adaptive.py  local_grader.py  placement.py  progression.py
src/phd_platform/capstone/: __init__.py  evaluator.py  generator.py
src/phd_platform/core/: __init__.py  enums.py  exceptions.py  models.py  parsing.py
src/phd_platform/curriculum/: __init__.py  loader.py
src/phd_platform/defense/: __init__.py  agents.py  rubric.py  (+1 more)
tests/: conftest.py  test_agents.py  test_cli.py  test_curriculum.py  test_defense.py  test_integrity.py  test_local_grader.py  test_models.py  test_parsing.py  test_persistence.py  test_placement.py  test_progression.py  test_web.py
(+67 files in other folders)
